force-app/main/default/objects/BDA_KPI_Details__c/BDA_KPI_Details__c.object-meta.xml
<CustomObject>
    <label>BDA KPI Details</label>
    <nameField>
        <displayFormat>BKD-{000000}</displayFormat>
        <label>BDA KPI Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDA KPI Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>