force-app/main/default/objects/BDA_KPI_Details__c/fields/AOV__c.field-meta.xml
<CustomField>
    <fullName>AOV__c</fullName>
    <label>AOV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>