force-app/main/default/objects/BDA_KPI_Details__c/fields/ATT_Day__c.field-meta.xml
<CustomField>
    <fullName>ATT_Day__c</fullName>
    <label>ATT/Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>