force-app/main/default/objects/BDA_KPI_Details__c/fields/Called_Leads__c.field-meta.xml
<CustomField>
    <fullName>Called_Leads__c</fullName>
    <label>Called Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>