force-app/main/default/objects/BDA_KPI_Details__c/fields/Connect_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Connect_Conversion__c</fullName>
    <label>Connect Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>