force-app/main/default/objects/BDA_KPI_Details__c/fields/Connected_Calls__c.field-meta.xml
<CustomField>
    <fullName>Connected_Calls__c</fullName>
    <label>Connected Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>