force-app/main/default/objects/BDA_KPI_Details__c/fields/Connected_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Connected_Percentage__c</fullName>
    <label>Connected Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>