force-app/main/default/objects/BDA_KPI_Details__c/fields/New_Leads_Count__c.field-meta.xml
<CustomField>
    <fullName>New_Leads_Count__c</fullName>
    <label>New Leads Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>