force-app/main/default/objects/BDA_KPI_Details__c/fields/Talktime_In_Second__c.field-meta.xml
<CustomField>
    <fullName>Talktime_In_Second__c</fullName>
    <label>Talk Time In Second</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>