force-app/main/default/objects/BDA_KPI_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Leads__c</columns>
    <columns>Called_Leads__c</columns>
    <columns>Called_Conversion__c</columns>
    <columns>Connected_Calls__c</columns>
    <columns>Called_Percentage__c</columns>
    <columns>Connect_Conversion__c</columns>
    <columns>ATT_Day__c</columns>
    <columns>Revenue__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>